# RustNAO

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: error.rs  filter.rs  local.rs  manga_page.rs  only_pixiv.rs  simple_example.rs  simple_json.rs
examples/async_local/: Cargo.toml
examples/async_local/src/: main.rs
examples/error/: main.rs
examples/filter/: main.rs
examples/local/: main.rs
examples/manga_page/: main.rs
examples/only_pixiv/: main.rs
examples/other_async_example/: Cargo.toml
examples/other_async_example/src/: main.rs
examples/simple_async/: .gitignore  Cargo.toml  main.rs
examples/simple_async/src/: main.rs
examples/simple_example/: main.rs
examples/simple_json/: main.rs
src/: constants.rs  handler.rs  lib.rs  main.rs
src/handler/: constants.rs  deserialize.rs  error.rs  sauce.rs
tests/: basic_test.rs  error_testing.rs
