[package]
name = "rustnao"
version = "0.2.1"
authors = ["Clement Tsang <clementjhtsang@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ClementTsang/RustNAO"
license = "MIT"
description = "A Rust implementation of a wrapper for the SauceNAO API."
keywords = ["saucenao", "saucenao-api", "wrapper"]
documentation = "https://docs.rs/rustnao/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.17"
serde_json = "1.0"
url = "1.7.2"
failure = "0.1.5"