[package]
name = "rustnao"
version = "0.3.0-alpha.1"
authors = ["Clement Tsang <clementjhtsang@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ClementTsang/RustNAO"
license = "MIT"
description = "A Rust implementation of a wrapper for the SauceNAO API."
keywords = ["saucenao", "saucenao-api", "wrapper"]
documentation = "https://docs.rs/rustnao/"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
reqwest = {version= "0.10.0-alpha.1", features=["blocking", "json", "default-tls", "default-tls-vendored"]}
serde_json = "1.0"
url = "2.1.0"
failure = "0.1.6"
