[package]
name = "rustnao"
version = "0.3.1"
authors = ["Clement Tsang <clementjhtsang@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ClementTsang/RustNAO"
license = "MIT"
description = "A Rust implementation of a wrapper for the SauceNAO API."
categories = ["api-bindings"]
keywords = ["saucenao", "saucenao-api", "wrapper"]
documentation = "https://docs.rs/rustnao/"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
surf = { version = "1.0", features = ["default"]}
async-std = "1.0.1"
serde_json = "1.0"
url = "2.1.0"
failure = "0.1.6"
